--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ a {
   margin-left: 33%;
   text-align: center;
   font-weight: bolder;
-  border: 2px cyan solid;
+  border: 2px rgb(255, 102, 0) solid;
   color: black;
 }
 
@@ -140,7 +140,7 @@ nav {
 }
 
 .navbar-nav .nav-link:hover {
-  color: cyan;
+  color: rgb(255, 102, 0);
 }
 
 /* Search results styles */
